--- a/de/about.html
+++ b/de/about.html
@@ -72,7 +72,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a class="getstarted" href="https://account.finspace.pro/auth/registration?desk_id=42">Einloggen</a></li>
+                <li><a class="getstarted" href="https://account.bridgetrust.group">Einloggen</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -212,8 +212,8 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Offener Account</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.finspace.pro/auth/registration?desk_id=42">Demo-Konto</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.finspace.pro/auth/registration?desk_id=42">Live-Konto</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.bridgetrust.group">Demo-Konto</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.bridgetrust.group">Live-Konto</a></li>
                     </ul>
                 </div>
             </div>
