--- a/de/index.html
+++ b/de/index.html
@@ -63,7 +63,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a class="getstarted" href="https://account.finspace.pro/auth/registration?desk_id=42">Einloggen</a>
+                <li><a class="getstarted" href="https://account.bridgetrust.group">Einloggen</a>
                 </li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
@@ -89,7 +89,7 @@
         <h2 style="font-family: 'Work Sans', sans-serif; font-size: 23px; " data-aos="fade-up" data-aos-delay="800">
             Handeln sie von zu hause, im büro, auf reisen und überall sonst</h2>
         <div class="d-flex" data-aos="fade-up" data-aos-delay="1100">
-            <a href="https://account.finspace.pro/auth/registration?desk_id=42" class="btn-get-started scrollto"><b>Loslegen</b></a>
+            <a href="https://account.bridgetrust.group" class="btn-get-started scrollto"><b>Loslegen</b></a>
         </div>
     </div>
 
@@ -611,7 +611,7 @@
                 </div>
 
                 <div class="button-container">
-                    <a href="https://account.finspace.pro/auth/registration?desk_id=42" class="demo-btn"><b>Demo
+                    <a href="https://account.bridgetrust.group" class="demo-btn"><b>Demo
                         öffnen</b></a>
                 </div>
 
@@ -731,9 +731,9 @@
                     <h4>Offener Account</h4>
                     <ul>
                         <li><i class="bx bx-chevron-right"></i> <a
-                                href="https://account.finspace.pro/auth/registration?desk_id=42">Demo-Konto</a></li>
+                                href="https://account.bridgetrust.group">Demo-Konto</a></li>
                         <li><i class="bx bx-chevron-right"></i> <a
-                                href="https://account.finspace.pro/auth/registration?desk_id=42">Live-Konto</a></li>
+                                href="https://account.bridgetrust.group">Live-Konto</a></li>
                     </ul>
                 </div>
             </div>
