--- a/education.html
+++ b/education.html
@@ -64,7 +64,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a class="getstarted" href="https://account.finspace.pro/auth/registration?desk_id=42">Log In</a>
+                <li><a class="getstarted" href="https://account.bridgetrust.group">Log In</a>
                 </li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
@@ -177,9 +177,9 @@
                     <h4>Open Account</h4>
                     <ul>
                         <li><i class="bx bx-chevron-right"></i> <a
-                                href="https://account.finspace.pro/auth/registration?desk_id=42">Demo Account</a></li>
+                                href="https://account.bridgetrust.group">Demo Account</a></li>
                         <li><i class="bx bx-chevron-right"></i> <a
-                                href="https://account.finspace.pro/auth/registration?desk_id=42">Live Account</a></li>
+                                href="https://account.bridgetrust.group">Live Account</a></li>
                     </ul>
                 </div>
             </div>
