--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h2 style="font-family: 'Work Sans', sans-serif; font-size: 23px; " data-aos="fade-up" data-aos-delay="800">
             Trade from home, at the office, while you travel, and anywhere else</h2>
         <div class="d-flex" data-aos="fade-up" data-aos-delay="1100">
-            <a href="https://account.finspace.pro/auth/registration?desk_id=42" class="btn-get-started scrollto"><b>Get
+            <a href="https://account.bridgetrust.group" class="btn-get-started scrollto"><b>Get
                 Started</b></a>
         </div>
     </div>
@@ -552,7 +552,7 @@
                 </div>
 
                 <div class="button-container">
-                    <a href="https://account.finspace.pro/auth/registration?desk_id=42" class="demo-btn"><b>Open
+                    <a href="https://account.bridgetrust.group" class="demo-btn"><b>Open
                         Demo</b></a>
                 </div>
 
