--- a/ru/about.html
+++ b/ru/about.html
@@ -65,7 +65,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a class="getstarted" href="https://account.finspace.pro/auth/registration?desk_id=42">Войти</a></li>
+                <li><a class="getstarted" href="https://account.bridgetrust.group">Войти</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
