--- a/ru/education.html
+++ b/ru/education.html
@@ -149,7 +149,7 @@
                             A108 Adam Street <br>
                             NY 535022, USA<br><br>
                             <strong>Phone:</strong> +1 5589 55488 55<br>
-                            <strong>Email:</strong> info@example.com<br>
+                            <strong>Email:</strong> info@bridgetrust.group<br>
                         </p>
                         <div class="social-links mt-3">
                             <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
