--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a class="getstarted" href="">Log In</a></li>
+                <li><a class="getstarted" href="https://account.bridgetrust.group/">Log In</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -85,7 +85,7 @@
         <h2 style="font-family: 'Work Sans', sans-serif; font-size: 23px; " data-aos="fade-up" data-aos-delay="800">
             Trade from home, at the office, while you travel, and anywhere else</h2>
         <div class="d-flex" data-aos="fade-up" data-aos-delay="1100">
-            <a href="https://account.bridgetrust.group" class="btn-get-started scrollto"><b>Get
+            <a href="https://account.bridgetrust.group/" class="btn-get-started scrollto"><b>Get
                 Started</b></a>
         </div>
     </div>
@@ -552,7 +552,7 @@
                 </div>
 
                 <div class="button-container">
-                    <a href="https://account.bridgetrust.group" class="demo-btn"><b>Open
+                    <a href="https://account.bridgetrust.group/" class="demo-btn"><b>Open
                         Demo</b></a>
                 </div>
 
@@ -672,10 +672,10 @@
                     <h4>Open Account</h4>
                     <ul>
                         <li><i class="bx bx-chevron-right"></i> <a
-                                href="">Demo
+                                href="https://account.bridgetrust.group/">Demo
                             Account</a></li>
                         <li><i class="bx bx-chevron-right"></i> <a
-                                href="">Live
+                                href="https://account.bridgetrust.group/">Live
                             Account</a></li>
                     </ul>
                 </div>
