--- a/ru/education.html
+++ b/ru/education.html
@@ -65,7 +65,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a class="getstarted" href="https://account.bridgetrust.group">Войти</a>
+                <li><a class="getstarted" href="https://account.bridgetrust.group/">Войти</a>
                 </li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
@@ -181,9 +181,9 @@
                     <h4>Начать торговлю</h4>
                     <ul>
                         <li><i class="bx bx-chevron-right"></i> <a
-                                href="">Демо счет</a></li>
+                                href="https://account.bridgetrust.group/">Демо счет</a></li>
                         <li><i class="bx bx-chevron-right"></i> <a
-                                href="">Реальный счет</a></li>
+                                href="https://account.bridgetrust.group/">Реальный счет</a></li>
                     </ul>
                 </div>
             </div>
