--- a/ru/index.html
+++ b/ru/index.html
@@ -65,7 +65,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a class="getstarted" href="https://account.bridgetrust.group">Войти</a>
+                <li><a class="getstarted" href="https://account.bridgetrust.group/">Войти</a>
                 </li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
@@ -91,7 +91,7 @@
         <h2 style="font-family: 'Work Sans', sans-serif; font-size: 23px; " data-aos="fade-up" data-aos-delay="800">
             Торгуйте из дома, в офисе, в дороге и в любом другом месте</h2>
         <div class="d-flex" data-aos="fade-up" data-aos-delay="1100">
-            <a href="https://account.bridgetrust.group" class="btn-get-started scrollto"><b>Начать</b></a>
+            <a href="https://account.bridgetrust.group/" class="btn-get-started scrollto"><b>Начать</b></a>
         </div>
     </div>
 
@@ -613,7 +613,7 @@
                 </div>
 
                 <div class="button-container">
-                    <a href="https://account.bridgetrust.group" class="demo-btn"><b>Открыть
+                    <a href="https://account.bridgetrust.group/" class="demo-btn"><b>Открыть
                         демо</b></a>
                 </div>
 
@@ -732,8 +732,8 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Начать торговлю</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="">Демо счет</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="">Реальный счет</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.bridgetrust.group/">Демо счет</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.bridgetrust.group/">Реальный счет</a></li>
                     </ul>
                 </div>
             </div>
