--- a/de/education.html
+++ b/de/education.html
@@ -65,7 +65,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a class="getstarted" href="https://account.bridgetrust.group">Einloggen</a></li>
+                <li><a class="getstarted" href="https://account.bridgetrust.group/">Einloggen</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -177,8 +177,8 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Offener Account</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.bridgetrust.group">Demo-Konto</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.bridgetrust.group">Live-Konto</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.bridgetrust.group/">Demo-Konto</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.bridgetrust.group/">Live-Konto</a></li>
                     </ul>
                 </div>
             </div>
