--- a/ru/about.html
+++ b/ru/about.html
@@ -65,7 +65,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a class="getstarted" href="https://account.bridgetrust.group">Войти</a></li>
+                <li><a class="getstarted" href="https://account.bridgetrust.group/">Войти</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -204,8 +204,8 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Начать торговлю</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="">Демо счет</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="">Реальный счет</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.bridgetrust.group/">Демо счет</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="https://account.bridgetrust.group/">Реальный счет</a></li>
                     </ul>
                 </div>
             </div>
