--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 <li><a class="nav-link scrollto" href="/index.html">Home</a></li>
                 <li><a class="nav-link scrollto active" href="/about.html">About</a></li>
                 <li><a class="nav-link scrollto" href="/education.html">Education</a></li>
-                <li><a class="nav-link scrollto" href="https://web-tbb.com/" target="_blank">Web Platform</a></li>
+                <li><a class="nav-link scrollto" href="https://webtbb.com/" target="_blank">Web Platform</a></li>
                 <li class="dropdown">
                     <a href="/about.html">
                         <span class="lang-flag en"></span>
@@ -197,7 +197,7 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Trading Platform</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="https://web-tbb.com/">Web Platform</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="https://webtbb.com/">Web Platform</a></li>
                     </ul>
                 </div>
 
