--- a/ru/education.html
+++ b/ru/education.html
@@ -42,7 +42,7 @@
                 <li><a class="nav-link scrollto" href="/ru/index.html">ГЛАВНАЯ</a></li>
                 <li><a class="nav-link scrollto" href="/ru/about.html">О НАС</a></li>
                 <li><a class="nav-link scrollto active" href="/ru/education.html">ОБРАЗОВАНИЕ</a></li>
-                <li><a class="nav-link" href="https://web-tbb.com/" target="_blank">Веб-платформа</a></li>
+                <li><a class="nav-link" href="https://webtbb.com/" target="_blank">Веб-платформа</a></li>
                 <li class="dropdown">
                     <a href="/ru/education.html">
                         <span class="lang-flag ru"></span>
@@ -173,7 +173,7 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Торговая платформа</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="https://web-tbb.com/">Веб-платформа</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="https://webtbb.com/">Веб-платформа</a></li>
                     </ul>
                 </div>
 
