--- a/de/education.html
+++ b/de/education.html
@@ -42,7 +42,7 @@
                 <li><a class="nav-link scrollto" href="/de/index.html">Heim</a></li>
                 <li><a class="nav-link scrollto" href="/de/about.html">Über uns</a></li>
                 <li><a class="nav-link scrollto active" href="/de/education.html">Ausbildung</a></li>
-                <li><a class="nav-link" href="https://web-tbb.com/" target="_blank">Webplattform</a></li>
+                <li><a class="nav-link" href="https://webtbb.com/" target="_blank">Webplattform</a></li>
                 <li class="dropdown">
                     <a href="/de/education.html">
                         <span class="lang-flag de"></span>
@@ -170,7 +170,7 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Handelsplattform</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="https://web-tbb.com/">Webplattform</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="https://webtbb.com/">Webplattform</a></li>
                     </ul>
                 </div>
 
